--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.18.1",
     "face-api.js": "^0.22.2",
     "framer-motion": "^12.9.4",
+    "lottie-react": "^2.4.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "react": "^19.0.0",
